Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE>
+<html lang="en"></html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>title</title>
+  </head>
+  <body>
+  </body>
+</html>
+    
