--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE>
-<html lang="en"></html>
-  <head>
-  </head>
-  <body>
-  </body>
-</html>
+  <html lang="en">
+    <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+      <title>title</title>
+    </head>
+    <body>
+    </body>
+  </html>
